<resources>
    <string name="app_name">醉凤楼</string>
    <string name="lou_feng">楼凤</string>
    <string name="upload">上传</string>
    <string name="demining">排雷区</string>
    <string name="attend_class">上课区</string>
    <string name="actor_height">身高</string>
    <string name="actor_weight">体重</string>
    <string name="actor_age">年龄</string>
    <string name="actor_bust">胸围</string>
    <string name="contact">&#8195;&#8195;联系她</string>
    <string name="click_copy">&#8195;&#8195;点击复制</string>
    <string name="install_qq">请先安装QQ</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="actor_name">名字</string>
    <string name="actor_phone">手机号</string>
    <string name="actor_qq">QQ</string>
    <string name="actor_wx">微信</string>
    <string name="actor_address">地址</string>
    <string name="class_content">上课内容</string>
    <string name="evaluation">上课评价</string>
    <string name="submit">提交</string>
    <string name="up_to_six_pieces">不能超过6张哦</string>
    <string name="gender">性别</string>
    <string name="city">城市</string>
    <string name="upload_img">别忘了上传照片</string>
    <string name="load_more">正在加载中…</string>
    <string name="load_fail">加载失败</string>
    <string name="load_end">上课老师以全部加载完成了哦！😊</string>
    <string name="report">举报</string>

    <string name="click_more_comment">点击查看更多评论</string>
    <string name="add_comment">点击添加评论</string>
    <string name="input_password">请输入密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="find_password">忘记密码?点击找回!</string>
    <string name="register_user">还没有账号?点击注册一个!</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="reply_input_password">请在次输入密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="click_login">我有账号,点击登录!</string>
    <string name="register">注册</string>
    <string name="email_not_empty">邮箱不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="name_not_empty">用户昵称不能为空</string>
    <string name="email_code_not_empty">验证码不能空空</string>
    <string name="two_password_not_empty">二次密码不能为空</string>
    <string name="email_code_error">验证码错误</string>
    <string name="email_format_error">邮箱格式错误</string>

    <string name="rule_text">
        0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;
    </string>
    <string name="girl_head_img">女头像</string>
    <string name="boy_head_img">男头像</string>

    <string name="two_passwords_are_inconsistent">两次密码不一致</string>
    <string name="send_email_success">已发送邮箱</string>
    <string name="register_success">注册成功,正在登录</string>
    <string name="back_login">返回登录</string>
    <string name="comment">评论</string>
    <string name="name_hint_format">格式:地方-名字</string>
    <string name="gender_not_empty">性别不能为空</string>
    <string name="city_not_empty">城市不能为空</string>
    <string name="teacher_rv">靠谱老师列表</string>
    <string name="reward">赞赏服务器</string>
    <string name="statement">负责声明</string>
    <string name="lw_vpn">老王PandaVPN下载</string>
    <string name="potato">Potato下载</string>
    <string name="panda_vpn">PandaVPN下载</string>
    <string name="thunder_teacher_rv">排雷老师列表</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="click_comment">点击评论</string>
    <string name="login_out">退出登录</string>
    <string name="new_version">检查到有新版本</string>
    <string name="update">更新</string>
    <string name="download_failed">下载失败</string>
    <string name="updata_password_success_back_login">修改密码成功,正在登录。。。</string>
    <string name="class_evaluation_">上课评价:\n</string>
    <string name="class_content_">上课内容:\n</string>
    <string name="sure">确定</string>
    <string name="use_must_see">使用必看</string>
    <string name="info_feedback">信息反馈</string>
  <string name="use_must_see_content">重要必读如果你没收到邮箱验证码去去垃圾邮箱看 \n重要必读如果你没收到邮箱验证码去去垃圾邮箱看 \n重要必读如果你没收到邮箱验证码去去垃圾邮箱看 \n经过一个多月的制作，醉凤楼（取了一个很傻逼的名字）终于发布了。记忆犹新，出入新手的我，混迹于各个楼凤群，看着骚棒们，发着各种车牌，用着想去又不敢去的心理，试问着，谁去过。排雷者们用以超强的心态到处排雷，到处踩坑。各个楼凤网站，用以昂贵的会员服务，卖着楼凤资源。资源共享是由大家来完成，如果你是一个铁公鸡般的伸手党，那么这款软件对你来说也没有多大意义。最后希望大家一起来共享重庆楼凤资源，上传你手中的资源，维护着这款软件。为了安全起见，没经过我确认的资源都在排雷区。本软件永久免费，没有广告，方便骚棒们在也不用到处询问，不用踩坑，也不用趟雷。如果后期需求大，也可以开放各地，只要你们愿意。
注:信息来自互联网，不用问是否都排过，不去最安全。既然你都不相信，还用这软件就没多大意思。当然老师也都不是符合大众口味，请不要逼逼赖赖。至少不是雷。如果你是老师以上岸，请联系我删掉你的信息。谢谢。
</string>
    <string name="potato_tv">Potato</string>
    <string name="contact_information_not_blank">QQ,微信,电话,Potato至少填一个哦!</string>
    <string name="contact_yourself">没有就填自己联系</string>
    <string name="class_content_not_blank">上课内容不能为空</string>
    <string name="phone_number_wrong_format">请输入正确得手机号</string>
    <string name="click">后可点击</string>
</resources>
