<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
                android:id="@+id/nav_potato"
                android:title="@string/potato"/>
        <item
                android:id="@+id/nav_lw_vpn"
                android:title="@string/lw_vpn"/>

        <item
            android:id="@+id/nav_info_feedback"
            android:title="@string/info_feedback"/>
        <item
                android:id="@+id/nav_add_qq_group"
                android:title="@string/add_qq_group"/>
        <item
                android:id="@+id/nav_reward"
                android:title="@string/reward"/>


        <item
                android:id="@+id/nav_login_out"
                android:title="@string/login_out"/>
    </group>


</menu>
