<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/dialog_shape"
            android:orientation="vertical">

        <TextView
                android:id="@+id/dialog_choose_one"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/camera"
                android:gravity="center"
                android:textSize="16sp" />

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#999" />

        <TextView
                android:id="@+id/dialog_choose_two"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:text="@string/album"
                android:textSize="16sp" />

    </LinearLayout>

    <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dialog_shape"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="16sp" />

</LinearLayout>