<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/load_more_loading_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading_car_animation.json"
                app:lottie_loop="true" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/load_more"
                android:textSize="14sp" />
    </LinearLayout>

    <FrameLayout
            android:id="@+id/load_more_load_fail_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <TextView
                android:id="@+id/tv_prompt"
                android:text="@string/load_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

    </FrameLayout>


    <FrameLayout
            android:id="@+id/load_more_load_end_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <TextView
                android:text="@string/load_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/darker_gray" />

    </FrameLayout>
</FrameLayout>