<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/dialog_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/use_must_see_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/use_must_see"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line"
            android:layout_below="@+id/use_must_see_tv"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/zfl_tip_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/use_must_see_content"
                    android:textSize="14sp" />

            </LinearLayout>
        </ScrollView>


        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_above="@id/sure_tv"
            android:layout_marginTop="15dp"
            android:background="#c4c4c4" />


        <TextView
            android:id="@+id/sure_tv"

            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/sure"
            android:enabled="false"
            android:textColor="#c4c4c4"
            android:textSize="14sp" />
    </RelativeLayout>

</FrameLayout>